# CHIP-8_Emulator

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c
